# PageSprite

./: .gitignore  CLAUDE.md  README.md  components.json  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
electron/: main.js  preload.cjs
electron/ai/: agent.js  client.js
electron/assets/: fontawesome.js
electron/ipc/: cancel.js  hooks.js  project.js  settings.js  workspace.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cancel.rs  hooks.rs  lib.rs  main.rs
src-tauri/src/ai/: client.rs
src-tauri/src/commands/: agent.rs  mod.rs  project.rs  settings.rs  workspace.rs
src/components/: ErrorBoundary.tsx  Grainient.d.ts  Grainient.jsx  Layout.tsx  LeftAnnotationToolbar.tsx  SettingsDialog.tsx  Toolbar.tsx  Workspace.tsx  ZoomControls.tsx
src/hooks/: cancelGeneration.ts  useAgentManager.ts  useAnnotations.ts
src/i18n/: index.ts
src/stores/: chatStore.ts
src/types/: electron.d.ts  index.ts
src/utils/: code.ts  snap.ts  zIndex.ts
